# Mobile_Manipulation_Robot

./: .gitignore  .gitmodules  README.md
src/controller/: package.xml  setup.py
src/controller/controller/: arm_controller.py  cartesian_controller.py  detection_test.py  joystick.py  object_following_controller.py  open_loop_controller.py  path_planner.py
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: DetectedObject.msg
src/detection/: package.xml  setup.py
src/detection/detection/: detection.py  dl_detection_cls.py  fluffy_detection.py
src/detection/dl_train/: detector.py  train.py
src/display_markers/: package.xml  setup.py
src/display_markers/display_markers/: display_markers.py
src/mapping/: package.xml  setup.py
src/mapping/mapping/: grid_map.py  mapper.py  mapping.py
src/mapping/mapping/workspace/: workspace.tsv
src/odometry/: setup.py
src/odometry/odometry/: imu_odometry.py  odometry.py  xxx.py
src/planning/: package.xml  setup.py
src/planning/planning/: path_follower.py  path_planner.py
src/robot_launch/: README.md  package.xml  setup.py
src/robot_launch/launch/: aruco_launch.py  frames_launch.xml
src/rplidar_ros2/launch/: rplidar.launch.py
src/runyu_interfaces/: CMakeLists.txt  package.xml
src/runyu_interfaces/msg/: StringArry.msg
src/teleop_twist_joy/config/: ps3.config.yaml
src/teleop_twist_joy/launch/: teleop-launch.py
