<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shamoung@kth.se">group8</maintainer>
  <license>MIT</license>

  <depend>python3-numpy</depend>
  <depend>python3-open3d-pip</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>PIL</depend>
  <depend>runyu_interfaces</depend>
  <depend>aruco_ros</depend>
  <depend>robp_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>sys</depend>
  <depend>torch</depend>
  <depend>torchvision</depend>

<build_depend>rosidl_default_generators</build_depend>

<exec_depend>rosidl_default_runtime</exec_depend>

<member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
